--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -36,14 +36,19 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/passport-jwt": "^4.0.1",
+    "@types/tough-cookie": "^4.0.5",
+    "axios": "^1.12.2",
+    "axios-cookiejar-support": "^6.0.4",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "node-rsa": "^1.1.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "tough-cookie": "^5.1.2",
     "typeorm": "^0.3.27"
   },
   "devDependencies": {
