--- a/apps/api/docker-compose.yml
+++ b/apps/api/docker-compose.yml
@@ -10,12 +10,12 @@ services:
       POSTGRES_USER: junvis_user
       POSTGRES_PASSWORD: junvis_password
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U junvis_user -d junvis_db"]
+      test: ['CMD-SHELL', 'pg_isready -U junvis_user -d junvis_db']
       interval: 10s
       timeout: 5s
       retries: 5
