--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "exif-js": "^2.3.0",
     "next": "^15.5.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
