--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -51,7 +51,7 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
     "tough-cookie": "^5.1.2",
     "typeorm": "^0.3.27"
   },
